--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.1.0",
     "@angular/animations": "~9.0.6",
     "@angular/cdk": "^9.1.3",
     "@angular/common": "~9.0.6",
@@ -20,14 +21,18 @@
     "@angular/core": "~9.0.6",
     "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "~9.0.6",
+    "@angular/google-maps": "^9.2.0",
     "@angular/material": "^9.1.3",
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
+    "@types/googlemaps": "^3.39.3",
+    "@types/socket.io-client": "^1.4.32",
     "faker": "^4.1.0",
     "jquery": "^3.4.1",
     "json-server": "^0.16.1",
     "rxjs": "~6.5.4",
+    "socket.io-client": "^2.3.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
