--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "faker": "^4.1.0",
     "jquery": "^3.4.1",
     "json-server": "^0.16.1",
+    "ngx-socket-io": "^3.0.1",
     "rxjs": "~6.5.4",
     "socket.io-client": "^2.3.0",
     "tslib": "^1.10.0",
