--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,7 @@
               "src/assets/svg/*"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "./src/styles/blue-teal.css",
               "./src/styles/styles.css",
               "./src/styles/badges.css",
               "./src/styles/palettes.css",
