--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser": "^9.0.7",
     "@angular/platform-browser-dynamic": "^9.0.7",
     "@angular/router": "^9.0.7",
+    "@swimlane/ngx-charts": "^14.0.0",
     "@types/googlemaps": "^3.39.6",
     "@types/socket.io-client": "^1.4.33",
     "faker": "^4.1.0",
